// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots PriorityNav Custom DropdownList 1`] = `
.c0 {
  position: relative;
  border: 2px solid #fed;
  display: inline-block;
}

.c1 {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  width: 5px;
  background: #fed;
  cursor: col-resize;
}

.c2 {
  display: inline-block;
  padding-left: 10px;
}

<div>
  <div
    className="c0"
    style={
      Object {
        "width": "400px",
      }
    }
  >
    <div
      className="PriorityNav_Root"
      style={
        Object {
          "minWidth": "250px",
        }
      }
    >
      <style
        dangerouslySetInnerHTML={
          Object {
            "__html": Array [
              "
  .PriorityNav_Root {
    position: relative;
    white-space: nowrap;
  }
  .PriorityNav_Main {
    display: inline-block;
  }
  .PriorityNav_Item {
    display: inline-block;
  }
  .PriorityNav_Button {
    display: inline-block;
    vertical-align: middle;
    cursor: pointer;
    &:hover {
      color: #999;
    }
  }
",
            ],
          }
        }
      />
      <div
        className="PriorityNav_Main"
      >
        <div
          className="PriorityNav_Item"
          style={
            Object {
              "padding": 0,
            }
          }
        >
          <button>
            I'm a Button ⏹ ️
          </button>
        </div>
        <div
          className="PriorityNav_Item"
          style={
            Object {
              "padding": 0,
            }
          }
        >
          <a>
            This is Link 🔗
          </a>
        </div>
        <div
          className="PriorityNav_Item"
          style={
            Object {
              "padding": 0,
            }
          }
        >
          <div>
            I'm a Div!
          </div>
        </div>
        <div
          className="PriorityNav_Item"
          style={
            Object {
              "padding": 0,
            }
          }
        >
          <div>
            Looooong Div🐢🐢🐢🐢
          </div>
        </div>
        <div
          className="PriorityNav_Item"
          style={
            Object {
              "padding": 0,
            }
          }
        >
          <div
            onClick={[Function]}
          >
            🉑
          </div>
        </div>
        <div
          className="PriorityNav_Button"
          onClick={[Function]}
        >
          <svg
            height="1rem"
            viewBox="0 0 512 512"
            width="1rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M328 256c0 39.8-32.2 72-72 72s-72-32.2-72-72 32.2-72 72-72 72 32.2 72 72zm104-72c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72zm-352 0c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="c1"
      onMouseDown={[Function]}
    />
  </div>
  <div
    className="c2"
  >
    👈🏼Drag the right bar to resize.
  </div>
</div>
`;

exports[`Storyshots PriorityNav Custom Icon 1`] = `
.c0 {
  position: relative;
  border: 2px solid #fed;
  display: inline-block;
}

.c2 {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  width: 5px;
  background: #fed;
  cursor: col-resize;
}

.c3 {
  display: inline-block;
  padding-left: 10px;
}

.c1 {
  max-width: 400px;
  background: #f5f5f5;
  border: 1px solid #e8e8e8;
  border-radius: 4px;
  position: absolute;
}

<div>
  <div
    className="c0"
    style={
      Object {
        "width": "400px",
      }
    }
  >
    <div
      className="PriorityNav_Root"
      style={
        Object {
          "minWidth": "250px",
        }
      }
    >
      <style
        dangerouslySetInnerHTML={
          Object {
            "__html": Array [
              "
  .PriorityNav_Root {
    position: relative;
    white-space: nowrap;
  }
  .PriorityNav_Main {
    display: inline-block;
  }
  .PriorityNav_Item {
    display: inline-block;
  }
  .PriorityNav_Button {
    display: inline-block;
    vertical-align: middle;
    cursor: pointer;
    &:hover {
      color: #999;
    }
  }
",
            ],
          }
        }
      />
      <div
        className="PriorityNav_Main"
      >
        <div
          className="PriorityNav_Item"
          style={
            Object {
              "padding": 0,
            }
          }
        >
          <button>
            I'm a Button ⏹ ️
          </button>
        </div>
        <div
          className="PriorityNav_Item"
          style={
            Object {
              "padding": 0,
            }
          }
        >
          <a>
            This is Link 🔗
          </a>
        </div>
        <div
          className="PriorityNav_Item"
          style={
            Object {
              "padding": 0,
            }
          }
        >
          <div>
            I'm a Div!
          </div>
        </div>
        <div
          className="PriorityNav_Item"
          style={
            Object {
              "padding": 0,
            }
          }
        >
          <div>
            Looooong Div🐢🐢🐢🐢
          </div>
        </div>
        <div
          className="PriorityNav_Item"
          style={
            Object {
              "padding": 0,
            }
          }
        >
          <div>
            🉑
          </div>
        </div>
        <div
          className="PriorityNav_Button"
        >
          <svg
            height="1rem"
            viewBox="0 0 512 512"
            width="1rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M328 256c0 39.8-32.2 72-72 72s-72-32.2-72-72 32.2-72 72-72 72 32.2 72 72zm104-72c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72zm-352 0c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="c1"
    />
    <div
      className="c2"
      onMouseDown={[Function]}
    />
  </div>
  <div
    className="c3"
  >
    👈🏼Drag the right bar to resize.
  </div>
</div>
`;
